--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,2 @@
-public-f net.minecraft.world.inventory.Slot f_40220_ # x # x # x
-public-f net.minecraft.world.inventory.Slot f_40221_ # y # y
+public-f net.minecraft.world.inventory.Slot x # x
+public-f net.minecraft.world.inventory.Slot y # y
